// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header short should render the Header short 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 50px;
  width: 100%;
  margin: 0 auto;
  background-color: #ffffff;
  max-width: none;
}

.c0 {
  background-color: #ffffff;
  margin: 0 auto;
  max-width: 1800px;
  height: 50px;
  width: 100%;
  box-shadow: 0 4px rgba(0,0,0,0.04);
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  max-width: none;
}

.c3 {
  display: inline-block;
  margin: 10px 10px 0px 10px;
}

.c3 > svg {
  height: 30px;
  width: 64px;
}

.c2 > h1 {
  height: 100%;
  margin: 0;
  font-family: 'AvenirNextLTW01-Demi';
  font-weight: bold;
}

.c2 > h1 > a {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > h1 > div > span {
  display: inline-block;
}

.c2 > h1 > a > div {
  height: 100%;
  line-height: 33px;
}

.c4 {
  overflow: hidden;
}

@media screen and (min-width:1024.02px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (max-width:768px) {
  .c2 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

@media screen and (max-width:375px) {
  .c2 > h1 > a > div > span {
    font-size: 14px;
  }
}

@media screen and (min-width:375.02px) {
  .c2 > h1 > a > div > span {
    font-size: 16px;
  }
}

@media screen and (max-width:768px) {
  .c4 {
    width: 50px;
  }
}

@media screen and (min-width:768.02px) {
  .c4 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

@media screen and (max-width:1024px) {
  .c5 {
    width: 50px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <h1>
        <a
          href="http://data.amsterdam.nl"
        >
          <span
            class="c3"
          >
            SVG_MOCK
          </span>
          <div>
            <span>
              Data en informatie
            </span>
          </div>
        </a>
      </h1>
    </div>
    <div
      class="c4"
    >
      <div>
         Search 
      </div>
    </div>
    <div
      class="c5"
    >
      <div>
         M 
      </div>
    </div>
  </div>
</div>
`;

exports[`Header short with content should render the Header short 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 50px;
  width: 100%;
  margin: 0 auto;
  background-color: #ffffff;
  max-width: 1600px;
}

.c0 {
  background-color: #ffffff;
  margin: 0 auto;
  max-width: 1800px;
  height: 50px;
  width: 100%;
  box-shadow: 0 4px rgba(0,0,0,0.04);
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  max-width: 1800px;
}

.c3 {
  display: inline-block;
  margin: 10px 10px 0px 10px;
}

.c3 > svg {
  height: 30px;
  width: 64px;
}

.c2 > h1 {
  height: 100%;
  margin: 0;
  font-family: 'AvenirNextLTW01-Demi';
  font-weight: bold;
}

.c2 > h1 > a {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > h1 > div > span {
  display: inline-block;
}

.c2 > h1 > a > div {
  height: 100%;
  line-height: 33px;
}

.c4 {
  overflow: hidden;
}

@media screen and (min-width:1024.02px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (max-width:768px) {
  .c2 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

@media screen and (max-width:375px) {
  .c2 > h1 > a > div > span {
    font-size: 14px;
  }
}

@media screen and (min-width:375.02px) {
  .c2 > h1 > a > div > span {
    font-size: 16px;
  }
}

@media screen and (max-width:768px) {
  .c4 {
    width: 50px;
  }
}

@media screen and (min-width:768.02px) {
  .c4 {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

@media screen and (max-width:1024px) {
  .c5 {
    width: 50px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <h1>
        <a
          href="http://data.amsterdam.nl"
        >
          <span
            class="c3"
          >
            SVG_MOCK
          </span>
          <div>
            <span>
              Data en informatie
            </span>
          </div>
        </a>
      </h1>
    </div>
    <div
      class="c4"
    >
      <div>
         Search 
      </div>
    </div>
    <div
      class="c5"
    >
      <div>
         M 
      </div>
    </div>
  </div>
</div>
`;
